--- a/RPEG/src/rpeg/Textures/CashMunyAintEvenFunny.fxml
+++ b/RPEG/src/rpeg/Textures/CashMunyAintEvenFunny.fxml
@@ -6,11 +6,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="429.0" fitWidth="620.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Users/csstudent/Desktop/Textures/velvet_texture1773.jpg" />
+            <Image url="@velvet_texture1773.jpg" />
          </image>
       </ImageView>
       <Button layoutX="252.0" layoutY="144.0" mnemonicParsing="false" prefHeight="4.0" prefWidth="98.0" text="START">
