--- a/RPEG/src/rpeg/UnfinishedMap.fxml
+++ b/RPEG/src/rpeg/UnfinishedMap.fxml
@@ -5,14 +5,14 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="948.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rpeg.UnfinishedMapController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="948.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="688.0" fitWidth="254.0" pickOnBounds="true">
          <image>
             <Image url="@Textures/old-paper.jpg" />
          </image>
       </ImageView>
-      <ImageView id="Map" fx:id="map" fitHeight="769.0" fitWidth="1295.0" layoutX="153.0" layoutY="-81.0" onKeyPressed="#keyPressed" onKeyReleased="#keyReleased" onKeyTyped="#keyTyped" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="Map" fx:id="map" fitHeight="769.0" fitWidth="1295.0" layoutX="153.0" layoutY="-81.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Textures/world-map.gif" />
          </image>
