--- a/RPEG/src/rpeg/CashMunyAintEvenFunny.fxml
+++ b/RPEG/src/rpeg/CashMunyAintEvenFunny.fxml
@@ -6,25 +6,29 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="429.0" fitWidth="620.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../Users/csstudent/Desktop/Textures/velvet_texture1773.jpg" />
-         </image>
-      </ImageView>
-      <Button layoutX="252.0" layoutY="144.0" mnemonicParsing="false" prefHeight="4.0" prefWidth="98.0" text="START">
-         <font>
-            <Font name="Avenir Medium" size="22.0" />
-         </font>
-      </Button>
-      <Button layoutX="271.0" layoutY="205.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="59.0" text="Help" />
-      <Button layoutX="183.0" layoutY="305.0" mnemonicParsing="false" text="Options" />
-      <Button layoutX="349.0" layoutY="305.0" mnemonicParsing="false" text="Credits" />
-      <Label layoutX="259.0" layoutY="88.0" prefHeight="34.0" prefWidth="84.0" text=".RPEG">
-         <font>
-            <Font name="BiauKai" size="31.0" />
-         </font>
-      </Label>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="601.0">
+         <children>
+            <ImageView fitHeight="429.0" fitWidth="620.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Textures/velvet_texture1773.jpg" />
+               </image>
+            </ImageView>
+            <Button layoutX="252.0" layoutY="144.0" mnemonicParsing="false" prefHeight="4.0" prefWidth="98.0" text="START">
+               <font>
+                  <Font name="Avenir Medium" size="22.0" />
+               </font>
+            </Button>
+            <Button layoutX="271.0" layoutY="205.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="59.0" text="Help" />
+            <Button layoutX="183.0" layoutY="305.0" mnemonicParsing="false" text="Options" />
+            <Button layoutX="349.0" layoutY="305.0" mnemonicParsing="false" text="Credits" />
+            <Label layoutX="259.0" layoutY="88.0" prefHeight="34.0" prefWidth="84.0" text=".RPEG">
+               <font>
+                  <Font name="BiauKai" size="31.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </children>
-</Pane>
+</StackPane>
