--- a/RPEG/src/rpeg/LayeredGUI.fxml
+++ b/RPEG/src/rpeg/LayeredGUI.fxml
@@ -44,7 +44,7 @@
                         <Tooltip text="Save your adventure" />
                      </tooltip>
                   </Button>
-                  <Button layoutX="14.0" layoutY="156.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="77.0" text="Quit">
+                  <Button layoutX="14.0" layoutY="156.0" mnemonicParsing="false" onAction="#quit" prefHeight="26.0" prefWidth="77.0" text="Quit">
                      <tooltip>
                         <Tooltip text="End the game" />
                      </tooltip>
