--- a/RPEG/src/rpeg/LayeredGUI.fxml
+++ b/RPEG/src/rpeg/LayeredGUI.fxml
@@ -10,7 +10,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPressed" prefHeight="3000.0" prefWidth="2999.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rpeg.LayeredGUIController">
    <children>
-      <Pane fx:id="MapScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="948.0" visible="false">
+      <Pane fx:id="MapScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="948.0">
          <children>
             <ImageView fitHeight="688.0" fitWidth="254.0" pickOnBounds="true">
                <image>
@@ -19,7 +19,7 @@
             </ImageView>
             <ImageView id="Map" fx:id="map" fitHeight="1000.0" fitWidth="1000.0" layoutX="153.0" layoutY="-81.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Textures/TestMap.jpg" />
+                  <Image url="@../../map.png" />
                </image>
             </ImageView>
             <Pane prefHeight="663.0" prefWidth="305.0">
