--- a/RPEG/src/rpeg/LayeredGUI.fxml
+++ b/RPEG/src/rpeg/LayeredGUI.fxml
@@ -58,75 +58,9 @@
             </Pane>
          </children>
       </Pane>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1226.0" visible="false">
-         <children>
-            <Accordion prefHeight="619.0" prefWidth="202.0">
-               <panes>
-                  <TitledPane animated="false" text="Spells">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Accordion layoutX="-1.0" prefHeight="540.0" prefWidth="202.0">
-                                 <panes>
-                                    <TitledPane animated="false" text="Passive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="Aggresive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" prefHeight="665.0" prefWidth="202.0" text="Defensive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                 </panes>
-                              </Accordion>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Items">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Accordion layoutX="-1.0" prefHeight="567.0" prefWidth="202.0">
-                                 <panes>
-                                    <TitledPane animated="false" text="untitled 1">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="untitled 2">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="untitled 3">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                 </panes>
-                              </Accordion>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Other">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                     </content>
-                  </TitledPane>
-               </panes>
-            </Accordion>
-         </children>
-      </Pane>
       <Pane fx:id="InventoryPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="474.0" style="-fx-background-color: #A51B00;" visible="false">
          <children>
+            <Button fx:id="hitButton" layoutX="-376.0" layoutY="-145.0" mnemonicParsing="false" opacity="0.0" prefHeight="707.0" prefWidth="1174.0" text="Button" />
             <ComboBox layoutX="14.0" layoutY="14.0" prefWidth="150.0">
                <tooltip>
                   <Tooltip text="Affects health and armor" />
@@ -209,7 +143,7 @@
             <Insets />
          </opaqueInsets>
       </Pane>
-      <Pane fx:id="StartPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="601.0" style="-fx-background-color: grey;">
+      <Pane fx:id="StartPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="601.0" style="-fx-background-color: grey;" visible="false">
          <children>
             <Button fx:id="StartButton" layoutX="252.0" layoutY="144.0" mnemonicParsing="false" onAction="#NextPane" prefHeight="4.0" prefWidth="98.0" text="START">
                <font>
@@ -224,6 +158,75 @@
             </Label>
             <Button layoutX="267.0" layoutY="306.0" mnemonicParsing="false" text="Options" />
             <Button layoutX="199.0" layoutY="306.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="60.0" text="Help" />
+         </children>
+      </Pane>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1226.0" style="-fx-background-image: &quot;rpeg.Texture/BattleBackground.png&quot;; -fx-background-repeat: stretch; -fx-background-position: center center;">
+         <children>
+            <Accordion prefHeight="619.0" prefWidth="202.0">
+               <panes>
+                  <TitledPane animated="false" text="Spells">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Accordion layoutX="-1.0" prefHeight="540.0" prefWidth="202.0">
+                                 <panes>
+                                    <TitledPane animated="false" text="Passive">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" text="Aggresive">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" prefHeight="665.0" prefWidth="202.0" text="Defensive">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                 </panes>
+                              </Accordion>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane animated="false" text="Items">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Accordion layoutX="-1.0" prefHeight="567.0" prefWidth="202.0">
+                                 <panes>
+                                    <TitledPane animated="false" text="untitled 1">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" text="untitled 2">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" text="untitled 3">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                 </panes>
+                              </Accordion>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane animated="false" text="Other">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     </content>
+                  </TitledPane>
+               </panes>
+            </Accordion>
+            <Label layoutX="216.0" layoutY="14.0" prefHeight="25.0" prefWidth="60.0" text="Health" />
+            <Label fx:id="currentHealth" layoutX="276.0" layoutY="18.0" text="Current" />
          </children>
       </Pane>
    </children>
