--- a/RPEG/src/rpeg/LayeredGUI.fxml
+++ b/RPEG/src/rpeg/LayeredGUI.fxml
@@ -10,83 +10,8 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPressed" prefHeight="1500.0" prefWidth="2000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rpeg.LayeredGUIController">
    <children>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1226.0" style="-fx-background-image: &quot;rpeg.Texture/BattleBackground.png&quot;; -fx-background-repeat: stretch; -fx-background-position: center center;" visible="false">
+      <Pane fx:id="MapScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="948.0" visible="false">
          <children>
-            <Button fx:id="hitButton" mnemonicParsing="false" onMouseClicked="#hit" onMouseMoved="#enemyHit" opacity="0.0" prefHeight="730.0" prefWidth="1226.0" text="Button" />
-            <Accordion prefHeight="619.0" prefWidth="202.0">
-               <panes>
-                  <TitledPane animated="false" text="Spells">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Accordion layoutX="-1.0" prefHeight="540.0" prefWidth="202.0">
-                                 <panes>
-                                    <TitledPane animated="false" text="Passive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="Aggresive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" prefHeight="665.0" prefWidth="202.0" text="Defensive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                 </panes>
-                              </Accordion>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Items">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Accordion layoutX="-1.0" prefHeight="567.0" prefWidth="202.0">
-                                 <panes>
-                                    <TitledPane animated="false" text="untitled 1">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="untitled 2">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="untitled 3">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                 </panes>
-                              </Accordion>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Other">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                     </content>
-                  </TitledPane>
-               </panes>
-            </Accordion>
-            <Label fx:id="playerHealth" layoutX="216.0" layoutY="14.0" prefHeight="25.0" prefWidth="60.0" text="Health" />
-            <Label layoutX="276.0" layoutY="18.0" text="Current" />
-         </children>
-      </Pane>
-      <Pane fx:id="MapScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="948.0">
-         <children>
-            <ImageView fitHeight="3118.0" fitWidth="5009.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../Users/csstudent/Desktop/1511735.jpg" />
-               </image>
-            </ImageView>
             <ImageView id="Map" fx:id="map" layoutX="250.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../map.png" />
@@ -131,73 +56,6 @@
                   </Button>
                </children>
             </Pane>
-         </children>
-      </Pane>
-      <Pane fx:id="CombatScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1226.0" visible="false">
-         <children>
-            <Accordion prefHeight="619.0" prefWidth="202.0">
-               <panes>
-                  <TitledPane animated="false" text="Spells">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Accordion layoutX="-1.0" prefHeight="540.0" prefWidth="202.0">
-                                 <panes>
-                                    <TitledPane animated="false" text="Passive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="Aggresive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" prefHeight="665.0" prefWidth="202.0" text="Defensive">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                 </panes>
-                              </Accordion>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Items">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Accordion layoutX="-1.0" prefHeight="567.0" prefWidth="202.0">
-                                 <panes>
-                                    <TitledPane animated="false" text="untitled 1">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="untitled 2">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                    <TitledPane animated="false" text="untitled 3">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                       </content>
-                                    </TitledPane>
-                                 </panes>
-                              </Accordion>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Other">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                     </content>
-                  </TitledPane>
-               </panes>
-            </Accordion>
          </children>
       </Pane>
       <Pane fx:id="InventoryPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="474.0" style="-fx-background-color: #A51B00;" visible="false">
@@ -299,6 +157,79 @@
             </Label>
             <Button layoutX="267.0" layoutY="306.0" mnemonicParsing="false" text="Options" />
             <Button layoutX="199.0" layoutY="306.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="60.0" text="Help" />
+         </children>
+      </Pane>
+      <Pane fx:id="CombatScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1226.0" style="-fx-background-image: &quot;rpeg.Texture/BattleBackground.png&quot;; -fx-background-repeat: stretch; -fx-background-position: center center;" visible="false">
+         <children>
+            <Button fx:id="hitButton" mnemonicParsing="false" onMouseClicked="#hit" onMouseMoved="#enemyHit" opacity="0.0" prefHeight="730.0" prefWidth="1226.0" text="Button" visible="false" />
+            <Accordion layoutX="-6.0" layoutY="-9.0" prefHeight="619.0" prefWidth="202.0">
+               <panes>
+                  <TitledPane animated="false" text="Spells">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Accordion layoutX="-1.0" prefHeight="540.0" prefWidth="202.0">
+                                 <panes>
+                                    <TitledPane animated="false" text="Passive">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" text="Aggresive">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" prefHeight="665.0" prefWidth="202.0" text="Defensive">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                 </panes>
+                              </Accordion>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane animated="false" text="Items">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Accordion layoutX="-1.0" prefHeight="567.0" prefWidth="202.0">
+                                 <panes>
+                                    <TitledPane animated="false" text="untitled 1">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" text="untitled 2">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" text="untitled 3">
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                    </TitledPane>
+                                 </panes>
+                              </Accordion>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane animated="false" text="Other">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     </content>
+                  </TitledPane>
+               </panes>
+            </Accordion>
+            <Label fx:id="playerHealth" layoutX="216.0" layoutY="14.0" prefHeight="25.0" prefWidth="60.0" text="Health" />
+            <Label fx:id="enemyHealth" layoutX="342.0" layoutY="19.0" text="EnemyHealth" />
+            <Label layoutX="276.0" layoutY="18.0" text="Current" />
+            <ImageView fx:id="PlayerCombat" fitHeight="150.0" fitWidth="200.0" layoutX="176.0" layoutY="501.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="MonsterCombat" fitHeight="150.0" fitWidth="200.0" layoutX="482.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
    </children>
